--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,11 @@ api-version: 1.20
 main: xyz.msws.simpletweaks.SimpleTweaks
 softdepend:
   - ProtocolLib
+commands:
+  enderchest:
+    permission: simpletweaks.enderchest
+    aliases:
+      - ec
+      - echest
+    description: Opens your enderchest
+    usage: /<command>
